src/tests/test-src/errors/E83-const-assign.syntran
// E83: const-assign
// Assigning to a const variable is not allowed

const N = 10;
N = 20;
